--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,27 +1,54 @@
 name: 🚀 Trigger Xcode Cloud Build
 
 on:
-  workflow_dispatch:  # Manually trigger from GitHub Actions
+  workflow_dispatch:
   push:
     branches:
-      - main  # Change to your default branch if needed
+      - main
 
 jobs:
   trigger_xcode_cloud:
-    runs-on: macos-latest  # ✅ Run on macOS instead of Ubuntu
+    runs-on: macos-latest
     steps:
       - name: 🔑 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 🔑 Generate JWT Token
+      - name: Install JWT Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install "pyjwt[crypto]" cryptography requests
+
+      - name: 🔑 Generate JWT Token (Python)
         id: jwt
         run: |
-          echo "Generating JWT..."
-          echo "${{ secrets.APPSTORE_PRIVATE_KEY }}" > AuthKey.p8
-          HEADER=$(echo -n '{"alg":"ES256","kid":"${{ secrets.APPSTORE_KEY_ID }}"}' | base64 | tr -d '=' | tr '/+' '_-')
-          PAYLOAD=$(echo -n '{"iss":"${{ secrets.APPSTORE_ISSUER_ID }}","iat":'$(date +%s)',"exp":'$(($(date +%s) + 1200))',"aud":"appstoreconnect-v1"}' | base64 | tr -d '=' | tr '/+' '_-')
-          SIGNATURE=$(echo -n "$HEADER.$PAYLOAD" | openssl dgst -sha256 -binary -sign AuthKey.p8 | base64 | tr -d '=' | tr '/+' '_-')
-          echo "JWT_TOKEN=$HEADER.$PAYLOAD.$SIGNATURE" >> $GITHUB_ENV
+          echo "${{ secrets.APPSTORE_PRIVATE_KEY }}" | base64 --decode > AuthKey.p8
+          python - <<EOF
+          import jwt
+          import time
+          import os
+
+          key_path = "AuthKey.p8"
+          key_id = os.getenv("APPSTORE_KEY_ID")
+          issuer_id = os.getenv("APPSTORE_ISSUER_ID")
+
+          with open(key_path, "r") as key_file:
+              private_key = key_file.read()
+
+          current_time = int(time.time())
+          payload = {
+              "iss": issuer_id,
+              "iat": current_time,
+              "exp": current_time + 1200,
+              "aud": "appstoreconnect-v1"
+          }
+
+          headers = {"alg": "ES256", "kid": key_id}
+          token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
+
+          print(f"JWT_TOKEN={token}")
+          with open(os.environ["GITHUB_ENV"], "a") as env_file:
+              env_file.write(f"JWT_TOKEN={token}\n")
+          EOF
 
       - name: 🚀 Start Xcode Cloud Build
         run: |
