--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,24 +1,27 @@
 name: 🚀 Trigger Xcode Cloud Build
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual trigger
   push:
     branches:
-      - main
+      - main  # Change to your main branch if needed
 
 jobs:
   trigger_xcode_cloud:
-    runs-on: macos-latest
+    runs-on: macos-latest  # ✅ Ensure it runs on macOS
     steps:
       - name: 🔑 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install JWT Dependencies
+      - name: 🔍 Debug GitHub Secrets
         run: |
-          python -m pip install --upgrade pip
-          pip install "pyjwt[crypto]" cryptography requests
+          echo "Checking GitHub Secrets..."
+          if [ -z "${{ secrets.APPSTORE_KEY_ID }}" ]; then echo "❌ APPSTORE_KEY_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_ISSUER_ID }}" ]; then echo "❌ APPSTORE_ISSUER_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_PRIVATE_KEY }}" ]; then echo "❌ APPSTORE_PRIVATE_KEY is missing!"; exit 1; fi
+          echo "✅ All required secrets are set!"
 
-            - name: 🔑 Generate JWT Token (Python)
+      - name: 🔑 Generate JWT Token (Python)
         id: jwt
         run: |
           echo "Using APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}"
@@ -54,7 +57,6 @@ jobs:
           with open(os.environ["GITHUB_ENV"], "a") as env_file:
               env_file.write(f"JWT_TOKEN={token}\n")
           EOF
-
 
       - name: 🚀 Start Xcode Cloud Build
         run: |
