--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # Allows manual trigger
   push:
     branches:
-      - main  # Change to your main branch if needed
+      - main  # Change if needed
 
 jobs:
   trigger_xcode_cloud:
@@ -13,21 +13,26 @@ jobs:
       - name: 🔑 Checkout Repository
         uses: actions/checkout@v4
 
+      - name: 🛠 Install Dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip3 install pyjwt cryptography  # ✅ Install dependencies
+
       - name: 🔍 Debug GitHub Secrets
         run: |
           echo "Checking GitHub Secrets..."
-          if [ -z "${{ vars.APPSTORE_KEY_ID }}" ]; then echo "❌ APPSTORE_KEY_ID is missing!"; exit 1; fi
-          if [ -z "${{ vars.APPSTORE_ISSUER_ID }}" ]; then echo "❌ APPSTORE_ISSUER_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_KEY_ID }}" ]; then echo "❌ APPSTORE_KEY_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_ISSUER_ID }}" ]; then echo "❌ APPSTORE_ISSUER_ID is missing!"; exit 1; fi
           if [ -z "${{ secrets.APPSTORE_PRIVATE_KEY }}" ]; then echo "❌ APPSTORE_PRIVATE_KEY is missing!"; exit 1; fi
           echo "✅ All required secrets are set!"
 
       - name: 🔑 Generate JWT Token (Python)
         id: jwt
         run: |
-          echo "Using APPSTORE_KEY_ID: ${{ vars.APPSTORE_KEY_ID }}"
-          echo "${{ secrets.APPSTORE_PRIVATE_KEY }}" | base64 --decode > AuthKey.p8
-          
-          python - <<EOF
+          echo "Using APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}"
+          echo "${{ secrets.APPSTORE_PRIVATE_KEY }}" | base64 -D > AuthKey.p8  # ✅ Fix `base64 --decode`
+
+          python3 <<EOF
           import jwt
           import time
           import os
