--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,91 +1,44 @@
-name: 🚀 Trigger Xcode Cloud Build
+- name: 🔑 Generate JWT Token (Python)
+  id: jwt
+  env:
+    APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+    APPSTORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+    APPSTORE_PRIVATE_KEY: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+  run: |
+    source venv/bin/activate
+    echo "Using APPSTORE_KEY_ID: $APPSTORE_KEY_ID"
+    echo "$APPSTORE_PRIVATE_KEY" | base64 --decode > AuthKey.p8
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+    python3 <<EOF
+    import jwt
+    import time
+    import os
 
-jobs:
-  trigger_xcode_cloud:
-    runs-on: macos-latest
-    steps:
-      - name: 🔑 Checkout Repository
-        uses: actions/checkout@v4
+    key_path = "AuthKey.p8"
+    key_id = os.getenv("APPSTORE_KEY_ID")
+    issuer_id = os.getenv("APPSTORE_ISSUER_ID")
 
-      - name: 🛠 Debug Environment Variables
-        run: |
-          echo "APPSTORE_KEY_ID: '${{ secrets.APPSTORE_KEY_ID }}'"
-          echo "APPSTORE_ISSUER_ID: '${{ secrets.APPSTORE_ISSUER_ID }}'"
-          echo "APPSTORE_PRIVATE_KEY: '${{ secrets.APPSTORE_PRIVATE_KEY }}'"
+    if not key_id or not key_id.strip():
+        raise ValueError("❌ ERROR: APPSTORE_KEY_ID is missing or empty!")
+    if not issuer_id or not issuer_id.strip():
+        raise ValueError("❌ ERROR: APPSTORE_ISSUER_ID is missing or empty!")
 
-      - name: 🛠 Set Up Python Virtual Environment & Install Dependencies
-        run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          python3 -m pip install --upgrade pip
-          pip install pyjwt cryptography
+    # ✅ Read the private key in binary mode to prevent UnicodeDecodeError
+    with open(key_path, "rb") as key_file:
+        private_key = key_file.read()
 
-      - name: 🔑 Generate JWT Token (Python)
-        id: jwt
-        env:
-          APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
-          APPSTORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
-          APPSTORE_PRIVATE_KEY: ${{ secrets.APPSTORE_PRIVATE_KEY }}
-        run: |
-          source venv/bin/activate
-          echo "Using APPSTORE_KEY_ID: $APPSTORE_KEY_ID"
-          echo "$APPSTORE_PRIVATE_KEY" | base64 --decode > AuthKey.p8
+    current_time = int(time.time())
+    payload = {
+        "iss": issuer_id,
+        "iat": current_time,
+        "exp": current_time + 1200,
+        "aud": "appstoreconnect-v1"
+    }
 
-          python3 <<EOF
-          import jwt
-          import time
-          import os
+    headers = {"alg": "ES256", "kid": key_id.strip()}
+    token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
 
-          key_path = "AuthKey.p8"
-          key_id = os.getenv("APPSTORE_KEY_ID")
-          issuer_id = os.getenv("APPSTORE_ISSUER_ID")
-
-          if not key_id or not key_id.strip():
-              raise ValueError("❌ ERROR: APPSTORE_KEY_ID is missing or empty!")
-          if not issuer_id or not issuer_id.strip():
-              raise ValueError("❌ ERROR: APPSTORE_ISSUER_ID is missing or empty!")
-
-          with open(key_path, "r") as key_file:
-              private_key = key_file.read()
-
-          current_time = int(time.time())
-          payload = {
-              "iss": issuer_id,
-              "iat": current_time,
-              "exp": current_time + 1200,
-              "aud": "appstoreconnect-v1"
-          }
-
-          headers = {"alg": "ES256", "kid": key_id.strip()}
-          token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
-
-          print(f"✅ JWT Token Generated: {token[:20]}... (truncated)")
-          with open(os.environ["GITHUB_ENV"], "a") as env_file:
-              env_file.write(f"JWT_TOKEN={token}\n")
-          EOF
-
-      - name: 🚀 Start Xcode Cloud Build
-        run: |
-          source venv/bin/activate
-          curl -X POST "https://api.appstoreconnect.apple.com/v1/ciBuildRuns" \
-            -H "Authorization: Bearer $JWT_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "data": {
-                "type": "ciBuildRuns",
-                "relationships": {
-                  "workflow": {
-                    "data": {
-                      "type": "ciWorkflows",
-                      "id": "${{ secrets.XCODE_CLOUD_WORKFLOW_ID }}"
-                    }
-                  }
-                }
-              }
-            }'
+    print(f"✅ JWT Token Generated: {token[:20]}... (truncated)")
+    with open(os.environ["GITHUB_ENV"], "a") as env_file:
+        env_file.write(f"JWT_TOKEN={token}\n")
+    EOF
