--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-- name: 🔑 Generate JWT Token (Python)
+ name: 🔑 Generate JWT Token (Python)
   id: jwt
   env:
     APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
