--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,94 +1,46 @@
-name: 🚀 Trigger Xcode Cloud Build
+- name: 🔑 Generate JWT Token (Python)
+  id: jwt
+  env:
+    APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+    APPSTORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+    APPSTORE_PRIVATE_KEY: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+  run: |
+    echo "Using APPSTORE_KEY_ID: $APPSTORE_KEY_ID"
 
-on:
-  workflow_dispatch:  # Allows manual trigger
-  push:
-    branches:
-      - main  # Change if needed
+    # Ensure the private key is correctly base64 decoded
+    echo "$APPSTORE_PRIVATE_KEY" | base64 --decode > AuthKey.p8 || { echo "❌ Failed to decode APPSTORE_PRIVATE_KEY"; exit 1; }
 
-jobs:
-  trigger_xcode_cloud:
-    runs-on: macos-latest  # ✅ Ensure it runs on macOS
+    python3 <<EOF
+import jwt
+import time
+import os
 
-    steps:
-      - name: 🔑 Checkout Repository
-        uses: actions/checkout@v4
+key_path = "AuthKey.p8"
+key_id = os.getenv("APPSTORE_KEY_ID", "").strip()
+issuer_id = os.getenv("APPSTORE_ISSUER_ID", "").strip()
 
-      - name: 🔍 Debug GitHub Secrets
-        run: |
-          echo "Checking GitHub Secrets..."
-          if [ -z "${{ secrets.APPSTORE_KEY_ID }}" ]; then echo "❌ APPSTORE_KEY_ID is missing!"; exit 1; fi
-          if [ -z "${{ secrets.APPSTORE_ISSUER_ID }}" ]; then echo "❌ APPSTORE_ISSUER_ID is missing!"; exit 1; fi
-          if [ -z "${{ secrets.APPSTORE_PRIVATE_KEY }}" ]; then echo "❌ APPSTORE_PRIVATE_KEY is missing!"; exit 1; fi
-          echo "✅ All required secrets are set!"
+if not key_id:
+    raise ValueError("❌ ERROR: APPSTORE_KEY_ID is missing or empty!")
+if not issuer_id:
+    raise ValueError("❌ ERROR: APPSTORE_ISSUER_ID is missing or empty!")
 
-      - name: 📦 Install Dependencies
-        run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          python3 -m pip install --upgrade pip
-          python3 -m pip install pyjwt cryptography
+print("✅ Reading private key in binary mode to prevent UnicodeDecodeError")
+with open(key_path, "rb") as key_file:  # Read in binary mode
+    private_key = key_file.read()
 
-      - name: 🔑 Generate JWT Token (Python)
-        id: jwt
-        env:
-          APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
-          APPSTORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
-          APPSTORE_PRIVATE_KEY: ${{ secrets.APPSTORE_PRIVATE_KEY }}
-        run: |
-          source venv/bin/activate
-          echo "Using APPSTORE_KEY_ID: $APPSTORE_KEY_ID"
-          echo "$APPSTORE_PRIVATE_KEY" | base64 --decode > AuthKey.p8
+current_time = int(time.time())
+payload = {
+    "iss": issuer_id,
+    "iat": current_time,
+    "exp": current_time + 1200,
+    "aud": "appstoreconnect-v1"
+}
 
-          python3 - <<EOF
-          import jwt
-          import time
-          import os
+headers = {"alg": "ES256", "kid": key_id}
+token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
 
-          key_path = "AuthKey.p8"
-          key_id = os.getenv("APPSTORE_KEY_ID", "").strip()
-          issuer_id = os.getenv("APPSTORE_ISSUER_ID", "").strip()
+print(f"✅ JWT Token Generated: {token[:20]}... (truncated)")
 
-          if not key_id:
-              raise ValueError("❌ ERROR: APPSTORE_KEY_ID is missing or empty!")
-          if not issuer_id:
-              raise ValueError("❌ ERROR: APPSTORE_ISSUER_ID is missing or empty!")
-
-          print("✅ Read private key in binary mode to prevent UnicodeDecodeError")
-          with open(key_path, "rb") as key_file:
-              private_key = key_file.read().decode("utf-8")
-
-          current_time = int(time.time())
-          payload = {
-              "iss": issuer_id,
-              "iat": current_time,
-              "exp": current_time + 1200,
-              "aud": "appstoreconnect-v1"
-          }
-
-          headers = {"alg": "ES256", "kid": key_id}
-          token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
-
-          print(f"✅ JWT Token Generated: {token[:20]}... (truncated)")
-          with open(os.environ["GITHUB_ENV"], "a") as env_file:
-              env_file.write(f"JWT_TOKEN={token}\n")
-          EOF
-
-      - name: 🚀 Start Xcode Cloud Build
-        run: |
-          curl -X POST "https://api.appstoreconnect.apple.com/v1/ciBuildRuns" \
-            -H "Authorization: Bearer $JWT_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "data": {
-                "type": "ciBuildRuns",
-                "relationships": {
-                  "workflow": {
-                    "data": {
-                      "type": "ciWorkflows",
-                      "id": "${{ secrets.XCODE_CLOUD_WORKFLOW_ID }}"
-                    }
-                  }
-                }
-              }
-            }'
+with open(os.environ["GITHUB_ENV"], "a") as env_file:
+    env_file.write(f"JWT_TOKEN={token}\n")
+EOF
