--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,35 +1,57 @@
-import jwt
-import time
-import os
+name: 🚀 Generate JWT Token and Trigger Xcode Cloud Build
 
-# Read secrets from environment variables
-key_path = "AuthKey.p8"
-key_id = os.getenv("APPSTORE_KEY_ID", "").strip()
-issuer_id = os.getenv("APPSTORE_ISSUER_ID", "").strip()
+on:
+  workflow_dispatch:  # Allows manual trigger
+  push:
+    branches:
+      - main  # Change this if necessary
 
-if not key_id:
-    raise ValueError("❌ ERROR: APPSTORE_KEY_ID is missing or empty!")
-if not issuer_id:
-    raise ValueError("❌ ERROR: APPSTORE_ISSUER_ID is missing or empty!")
+jobs:
+  generate_jwt:
+    runs-on: macos-latest
+    steps:
+      - name: 🛠 Checkout Repository
+        uses: actions/checkout@v4
 
-print("✅ Reading private key in binary mode to prevent UnicodeDecodeError")
-with open(key_path, "rb") as key_file:  # Read in binary mode
-    private_key = key_file.read()
+      - name: 🔍 Debug GitHub Secrets
+        run: |
+          if [ -z "${{ secrets.APPSTORE_KEY_ID }}" ]; then echo "❌ APPSTORE_KEY_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_ISSUER_ID }}" ]; then echo "❌ APPSTORE_ISSUER_ID is missing!"; exit 1; fi
+          if [ -z "${{ secrets.APPSTORE_PRIVATE_KEY }}" ]; then echo "❌ APPSTORE_PRIVATE_KEY is missing!"; exit 1; fi
+          echo "✅ All required secrets are set!"
 
-# Generate JWT token
-current_time = int(time.time())
-payload = {
-    "iss": issuer_id,
-    "iat": current_time,
-    "exp": current_time + 1200,  # Token expires in 20 minutes
-    "aud": "appstoreconnect-v1"
-}
+      - name: 🛠 Install Dependencies
+        run: |
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install pyjwt cryptography
 
-headers = {"alg": "ES256", "kid": key_id}
-token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
+      - name: 🔑 Decode Base64-Encoded Private Key
+        run: |
+          echo "$APPSTORE_PRIVATE_KEY" | base64 --decode > AuthKey.p8 || { echo "❌ Failed to decode APPSTORE_PRIVATE_KEY"; exit 1; }
 
-print(f"✅ JWT Token Generated: {token[:20]}... (truncated)")
+      - name: 🔑 Generate JWT Token (Python)
+        env:
+          APPSTORE_KEY_ID: ${{ secrets.APPSTORE_KEY_ID }}
+          APPSTORE_ISSUER_ID: ${{ secrets.APPSTORE_ISSUER_ID }}
+        run: python3 generate_jwt.py
 
-# Save JWT Token to GitHub Environment
-with open(os.getenv("GITHUB_ENV"), "a") as env_file:
-    env_file.write(f"JWT_TOKEN={token}\n")
+      - name: 🚀 Start Xcode Cloud Build
+        run: |
+          curl -X POST "https://api.appstoreconnect.apple.com/v1/ciBuildRuns" \
+            -H "Authorization: Bearer $JWT_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "data": {
+                "type": "ciBuildRuns",
+                "relationships": {
+                  "workflow": {
+                    "data": {
+                      "type": "ciWorkflows",
+                      "id": "${{ secrets.XCODE_CLOUD_WORKFLOW_ID }}"
+                    }
+                  }
+                }
+              }
+            }'
